# AbyssEngineNew

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: cmake.yml
abyssengine/: CMakeLists.txt
abyssengine/src/: abyssengine.cpp
abyssengine/src/common/: events.h  inifile.cpp  inifile.h  ringbuffer.cpp  ringbuffer.h
abyssengine/src/engine/: engine.cpp  engine.h  filesystemprovider.cpp  filesystemprovider.h  loader.cpp  loader.h  mpqprovider.cpp  mpqprovider.h  provider.h  spritefont.cpp  spritefont.h
abyssengine/src/node/: dc6sprite.cpp  dc6sprite.h  node.cpp  node.h  sprite.cpp  sprite.h  video.cpp  video.h
abyssengine/src/scripting/: scripthost.cpp  scripthost.h
abyssengine/src/systemio/: interface.cpp  interface.h
abyssengine/src/systemio/sdl2/: sdl2systemio.cpp  sdl2systemio.h  sdl2texture.cpp  sdl2texture.h
abysstoolset/: CMakeLists.txt
abysstoolset/src/: abt.cpp
libabyss/: CMakeLists.txt
libabyss/include/libabyss/: bitstream.h  crypto.h  dc6.h  inputstream.h  mpq.h  mpqstream.h  palette.h  readstream.h  streamreader.h
libabyss/src/: bitstream.cpp  crypto.cpp  dc6.cpp  mpq.cpp  mpqstream.cpp  palette.cpp  readstream.cpp
tests/: CMakeLists.txt  bitstream_test.cpp  mpq_test.cpp
